--- a/blog.html
+++ b/blog.html
@@ -6,15 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Blogs</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/nav.css">
 </head>
 
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a target="_blank" href="video.html">Video</a></li>
+                <li><a target="_blank" href="form.html">Form</a></li>
+                <li><a target="_blank" href="blog.html">Blog</a></li>
+                <li><a target="_blank" href="table.html">Table</a></li>
             </ul>
         </nav>
     </header>
