--- a/form.html
+++ b/form.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jamal Er Maa - Pitha Ghar</title>
+    <link rel="stylesheet" href="CSS/nav.css">
     <style>
         label {
             display: block;
@@ -15,7 +16,14 @@
 
 <body>
     <header>
-
+        <nav>
+            <ul>
+                <li><a target="_blank" href="video.html">Video</a></li>
+                <li><a target="_blank" href="form.html">Form</a></li>
+                <li><a target="_blank" href="blog.html">Blog</a></li>
+                <li><a target="_blank" href="table.html">Table</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section>
