--- a/table.html
+++ b/table.html
@@ -27,7 +27,14 @@
                 <li><a target="_blank" href="video.html">Video</a></li>
                 <li><a target="_blank" href="form.html">Form</a></li>
                 <li><a target="_blank" href="blog.html">Blog</a></li>
-                <li><a target="_blank" href="table.html">Table</a></li>
+                <li><a target="_blank" href="table.html">Table</a>
+                    <ul class="dropdown">
+                        <li><a target="_blank" href="video.html">Video</a></li>
+                        <li><a target="_blank" href="form.html">Form</a></li>
+                        <li><a target="_blank" href="blog.html">Blog</a></li>
+                        <li><a target="_blank" href="table.html">Table</a></li>
+                    </ul>
+                </li>
             </ul>
         </nav>
     </header>
@@ -74,6 +81,9 @@
                 </tr>
             </tfoot>
         </table>
+        <button>Click Me</button>
+        <button disabled>Click Me</button>
+        <input type="number" name="" id="" max="10" min="0">
     </main>
 </body>
 
