--- a/video.html
+++ b/video.html
@@ -5,9 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Audio Video</title>
+    <link rel="stylesheet" href="CSS/nav.css">
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a target="_blank" href="video.html">Video</a></li>
+                <li><a target="_blank" href="form.html">Form</a></li>
+                <li><a target="_blank" href="blog.html">Blog</a></li>
+                <li><a target="_blank" href="table.html">Table</a></li>
+            </ul>
+        </nav>
+    </header>
     <h2>Audio & Video</h2>
     <audio controls src="Midea/Goat-Baby-Bah-A-www.fesliyanstudios.com.mp3"></audio>
     <video width="200px" controls src="Midea/5538262-hd_1920_1080_25fps.mp4"></video>
